0.4.0
 - feat: CLI by default creates output file that contains no redundant
   data and uses the input file as a basin; old behavior can be brought
   back with the "--drain-basins" command-line option
 - fix: show correct data PPID in CLI
 - setup: bump dcnum from 0.19.1 to 0.20.1
0.3.1
 - ref: migrate from QTableView to QTableWidget (issues with Windows 11)
0.3.0
 - BREAKING CHANGE: major changes in dcnum postprocessing
 - feat: allow to select whether volume should be computed
 - feat: allow to select whether flickering correction should be done
 - feat: allow to specify number of events to analyze in CLI
 - enh: expose background computation parameters in CLI
 - ref: move `manager` module to `gui` module
 - setup: bump dcnum from 0.17.2 to 0.19.1
0.2.2
 - maintenance release
0.2.1
 - fix: cast string to paths when adding a new path to the manager (#6)
 - setup: bump dcnum from 0.16.8 to 0.17.2
0.2.0
 - feat: allow to specify an output directory in the GUI (#3)
 - feat: allow to select the pixel size in the GUI (#4)
 - feat: introduce PathCache for remembering previous output directories
 - ref: support latest dcnum version
 - ci: do not build mac app during checks
0.1.9
  - initial pre-release
0.0.1
 - skeleton release